# tephi

./: .coveragerc  .flake8  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .stickler.yml  .travis.yml  CITATION.cff  LICENSE  MANIFEST.in  README.md  README.rst  environment.yml  index.ipynb  pyproject.toml  requirements-dev.txt  requirements-sphinx.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: documentation-.md  feature-request.md  other.md  🐛-bug-report.md
.github/workflows/: ci-citation.yml  ci-docs.yml  ci-manifest.yml  ci-stale.yml  ci-template-check.yml  ci-tests.yml  ci-wheels.yml  manifest.yml  stale.yml  test-docs.yml  test.yml
ci/requirements/: dev.yml  requirements-dev.txt  rtd.yml
ci/requirements/py3/: py36.yml  py37.yml  py38.yml
docs/: Makefile
docs/source/: barbs.rst  conf.py  customise.rst  generate_logo.py  glossary.rst  index.rst  introduction.rst  plotting.rst
docs/source/plot/: barbs.py
docs/tephi/: make.bat
docs/tephi/source/: barbs.rst  conf.py  customise.rst  glossary.rst  index.rst  introduction.rst  plotting.rst
docs/tephi/source/plot/: barbs.py
docs/tephi/source/sphinxext/: custom_class_autodoc.py  generate_package_rst.py
docs/tephi/source/tephi/: tephi.rst
docs/tephi/source/tephi/tephi/: isopleths.rst  transforms.rst
etc/test_results/: barbs.pkl  dews.pkl  temps.pkl
lib/tephi/: __init__.py  _constants.py  isopleths.py  transforms.py
lib/tephi/etc/test_results/: dews.npz
lib/tephi/tests/: __init__.py  test_imagerepo.py  test_tephigram.py
lib/tephi/tests/unit/: __init__.py  test__PlotCollection.py
requirements/: dev.yml  rtd.yml
src/tephi/: DELETE_example.py  __init__.py  _constants.py
src/tephi/etc/test_data/: barbs.txt  comma_sep.txt  dews.txt  temps.txt
src/tephi/tests/: __init__.py  test_imagerepo.py
tephi/: __init__.py  artists.py  constants.py  isopleths.py  old__init__.py  resources  transforms.py
tephi/tests/: __init__.py  conftest.py  data  idiff.py  results  test_imagerepo.py  test_tephigram.py
tephi/tests/results/: imagerepo.json
tephi/utils/: __init__.py  report.py
tests/: __init__.py  conftest.py  idiff.py  test_imagerepo.py  test_tephigram.py
tests/results/: barbs.npz  temps.npz
