[flake8]
exclude =
    .git,
    docs,
    tests/__init__.py
    .eggs

[tool:pytest]
testpaths =
    /
markers =
    graphical: mark a test as a graphical test
addopts =
    -ra
    -v
    --cov-config=.coveragerc
    --cov=tephi
    --cov-report=term-missing
    --doctest-modules
doctest_optionflags = NORMALIZE_WHITESPACE ELLIPSIS NUMBER

[metadata]
name = tephi
version = attr: tephi.__version__
author = UK Met Office
author_email = scitools-iris-dev@googlegroups.com
url = https://github.com/SciTools/tephi
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering :: Atmospheric Science
    Topic :: Scientific/Engineering :: Visualization
license_files = LICENSE
description = Tephigram plotting in Python
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    code = https://github.com/SciTools/tephi
    issues = https://github.com/SciTools/tephi/issues
    binder = https://mybinder.org/v2/gh/SciTools/tephi/main?filepath=index.ipynb
    documentation =  https://tephi.readthedocs.io/en/latest/
keywords =
    tephigram
    radiosonde
    meteorology
    visualization

[options]
packages = find:
setup_requires =
    setuptools>=40.8.0
    wheel
install_requires =
    matplotlib
    numpy
    scipy
python_requires = >=3.8

[options.package_data]
tephi =
  tephi/etc/test_data/*.txt
  tests/results/*.npz
  tests/results/imagerepo.json
