[tool:pytest]
testpaths =
    tephi/
markers =
    graphical: mark a test as a graphical test
addopts =
    -ra
    -v
    --cov-config=.coveragerc
    --cov=tephi
    --cov-report=term-missing
    --doctest-modules
doctest_optionflags = NORMALIZE_WHITESPACE ELLIPSIS NUMBER

[options]
packages = find:
setup_requires =
    setuptools>=40.8.0
    wheel
install_requires =
    matplotlib
    numpy
    scipy
python_requires = >=3.8

[options.package_data]
tephi =
  etc/test_data/*.txt
  tests/results/*.npz
  tests/results/imagerepo.json
