[tool:pytest]
testpaths =
    tephi/
markers =
    graphical: mark a test as a graphical test
addopts =
    -ra
    -v
    --cov-config=.coveragerc
    --cov=tephi
    --cov-report=term-missing
    --doctest-modules
doctest_optionflags = NORMALIZE_WHITESPACE ELLIPSIS NUMBER

[options.package_data]
tephi =
  etc/test_data/*.txt
  tests/results/*.npz
  tests/results/imagerepo.json
